opam-version: "2.0"
maintainer: "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors: ["Daniel Bünzli" "Thomas Gazagnaire"]
homepage: "https://github.com/samoht/dune-release"
license: "ISC"
dev-repo: "git+https://github.com/samoht/dune-release.git"
bug-reports: "https://github.com/samoht/dune-release/issues"
doc: "https://samoht.github.io/dune-release/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
  "fmt"
  "bos"
  "cmdliner"
  "re"
  "opam-format"
  "rresult"
  "logs"
  "odoc"
  "alcotest" {with-test}
]
