opam-version: "2.0"
maintainer: "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors: ["Daniel Bünzli" "Thomas Gazagnaire" "Nathan Rebours"]
homepage: "https://github.com/samoht/dune-release"
license: "ISC"
dev-repo: "git+https://github.com/samoht/dune-release.git"
bug-reports: "https://github.com/samoht/dune-release/issues"
doc: "https://samoht.github.io/dune-release/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.2.0"}
  "fmt"
  "bos"
  "cmdliner"
  "re"
  "opam-format"
  "opam-state"
  "opam-core"
  "rresult"
  "logs"
  "odoc"
  "alcotest" {with-test}
  "yaml"
]

synopsis: "Release dune packages in opam"
description: """
`dune-release` is a tool to streamline the release of Dune packages in
[opam](https://opam.ocaml.org). It supports projects built
with [Dune](https://github.com/ocaml/dune) and hosted on
[GitHub](https://github.com).
"""
