opam-version: "2.0"
maintainer: "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors: ["Daniel Bünzli" "Thomas Gazagnaire" "Nathan Rebours"]
homepage: "https://github.com/ocamllabs/dune-release"
license: "ISC"
dev-repo: "git+https://github.com/ocamllabs/dune-release.git"
bug-reports: "https://github.com/ocamllabs/dune-release/issues"
doc: "https://ocamllabs.github.io/dune-release/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.4.0"}
  "curly"
  "fmt"
  "bos"
  "cmdliner"
  "re"
  "opam-format" {< "2.1.0~beta"}
  "opam-state" {< "2.1.0~beta"}
  "opam-core" {< "2.1.0~beta"}
  "rresult"
  "logs"
  "odoc"
  "alcotest" {with-test}
  "mdx" {with-test & >= "1.6.0"}
  "yojson"
  "uri"
]

synopsis: "Release dune packages in opam"
description: """
`dune-release` is a tool to streamline the release of Dune packages in
[opam](https://opam.ocaml.org). It supports projects built
with [Dune](https://github.com/ocaml/dune) and hosted on
[GitHub](https://github.com).
"""
